# AntibioticResistanceGeneDetector

./: CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  VERSION  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test_blast.tsv
AntibioticResistanceGeneDetector/: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test_blast.tsv
AntibioticResistanceGeneDetector/.github/workflows/: docs.yml  pre_release_validation.yml  publish_pypi.yml  publish_testpypi.yml  release.yml  (+1 more)
AntibioticResistanceGeneDetector/data/: gene_class_map.csv  resistance_genes.fasta
AntibioticResistanceGeneDetector/docs/: api.md  api_reference.md  architecture.md  changelog.md  cli-reference.md  development.md  index.md  installation.md  usage.md
AntibioticResistanceGeneDetector/input/: example.fasta  test_batch1.fasta  test_batch2.fasta
AntibioticResistanceGeneDetector/notebooks/: demo.ipynb
AntibioticResistanceGeneDetector/site/: index.html  objects.inv  sitemap.xml
AntibioticResistanceGeneDetector/src/: __init__.py  error_handling.py  gene_detector.py  interpret_results.py  main.py  rich_utils.py  run_blast.py  utils.py  visualization.py
AntibioticResistanceGeneDetector/tests/: test_batch_processing.py  test_blast_detection.py  test_blast_detection_logic.py  test_blast_output_parsing.py  test_ci_edge_cases.py  test_cli_args.py  test_cli_help.py  test_cli_version.py  test_detector.py  test_interpreter.py  test_mock_vs_real_structure.py  test_report_formatting.py  test_utils.py  test_visualization_functions.py
(+72 files in other folders)
