[metadata]
name = AntibioticResistanceGeneDetector
version = file: VERSION
description = Detect antibiotic resistance genes in FASTA files using BLAST+/DIAMOND
long_description = file: README.md
long_description_content_type = text/markdown
author = GitHub Copilot
license = MIT
url = https://github.com/github-copilot/AntibioticResistanceGeneDetector

[options]
packages = find:
python_requires = >=3.8
install_requires =
    biopython
    pandas
    numpy
    matplotlib
    seaborn
    networkx
    tqdm
    rich>=13.4.0

[options.entry_points]
console_scripts =
    arg_res_detector = src.main:main
